--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,5 +51,5 @@ clap_complete = "4.3"
 clap_mangen = "0.2"
 
 # mml
-mml-lib.git = "https://git.sr.ht/~soywod/pimalaya"
+mml-lib.version = "=0.1.0"
 mml-lib.default-features = false
