--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,10 +17,10 @@ name = "mml"
 path = "src/main.rs"
 
 [features]
+all = ["compiler", "interpreter", "pgp-commands", "pgp-gpg", "pgp-native"]
 default = ["compiler", "interpreter"]
-compiler = ["mml-lib/compiler"]
+compiler = ["mml-lib/compiler", "ariadne"]
 interpreter = ["mml-lib/interpreter"]
-pgp = ["mml-lib/pgp"]
 pgp-commands = ["mml-lib/pgp-commands"]
 pgp-gpg = ["mml-lib/pgp-gpg"]
 pgp-native = ["mml-lib/pgp-native"]
@@ -70,6 +70,10 @@ version = "0.2"
 
 # mml
 
+[dependencies.ariadne]
+version = "0.3.0"
+optional = true
+
 [dependencies.mml-lib]
-version = "=0.2.3"
+version = "=0.3.2"
 default-features = false
