--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "mml-cli"
-description = "CLI to deal with Emacs MIME message Meta Language (MML)."
+description = "CLI to compile MML messages to MIME messages and interpret MIME messages as MML messages."
 version = "0.2.1"
 authors = ["soywod <clement.douin@posteo.net>"]
 edition = "2021"
 license = "MIT"
 categories = ["command-line-utilities", "email", "text-processing"]
 keywords = ["email", "mime", "message", "mml", "emacs"]
-homepage = "https://pimalaya.org/"
+homepage = "https://pimalaya.org/mml/"
 documentation = "https://pimalaya.org/mml/"
 repository = "https://github.com/soywod/mml/"
 metadata.docs.rs.all-features = true
@@ -25,38 +25,22 @@ pgp-commands = ["mml-lib/pgp-commands"]
 pgp-gpg = ["mml-lib/pgp-gpg"]
 pgp-native = ["mml-lib/pgp-native"]
 
+# dev dependencies
+
 [dev-dependencies.tempfile]
 version = "3.3"
 
-# error
+# dependencies
 
 [dependencies.anyhow]
 version = "1.0"
 
-# log
-
-[dependencies.log]
-version = "0.4"
-
-[dependencies.env_logger]
-version = "0.10"
-
-# async
-
-[dependencies.tokio]
-version = "1.32"
-default-features = false
-features = ["macros", "rt-multi-thread"]
-
-# io
+[dependencies.ariadne]
+version = "0.3"
+optional = true
 
 [dependencies.atty]
 version = "0.2"
-
-[dependencies.shellexpand-utils]
-version = "0.1.0"
-
-# cli
 
 [dependencies.clap]
 version = "4.3"
@@ -68,12 +52,20 @@ version = "4.3"
 [dependencies.clap_mangen]
 version = "0.2"
 
-# mml
+[dependencies.env_logger]
+version = "0.10"
 
-[dependencies.ariadne]
-version = "0.3.0"
-optional = true
+[dependencies.log]
+version = "0.4"
 
 [dependencies.mml-lib]
 version = "=0.3.2"
 default-features = false
+
+[dependencies.shellexpand-utils]
+version = "0.1.0"
+
+[dependencies.tokio]
+version = "1.32"
+default-features = false
+features = ["macros", "rt-multi-thread"]
