--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,8 +17,13 @@ name = "mml"
 path = "src/main.rs"
 
 [features]
-all = ["compiler", "interpreter", "pgp-commands", "pgp-gpg", "pgp-native"]
-default = ["compiler", "interpreter"]
+default = [
+  "compiler",
+  "interpreter",
+  # "pgp-commands",
+  # "pgp-gpg",
+  # "pgp-native",
+]
 compiler = ["mml-lib/compiler", "ariadne"]
 interpreter = ["mml-lib/interpreter"]
 pgp-commands = ["mml-lib/pgp-commands"]
@@ -59,7 +64,7 @@ version = "0.10"
 version = "0.4"
 
 [dependencies.mml-lib]
-version = "=0.4.0"
+version = "=0.5.0"
 default-features = false
 
 [dependencies.shellexpand-utils]
