--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,10 @@ keywords = ["email", "mime", "message", "mml", "emacs"]
 homepage = "https://pimalaya.org/mml/"
 documentation = "https://pimalaya.org/mml/"
 repository = "https://github.com/soywod/mml/"
-metadata.docs.rs.all-features = true
+
+[package.metadata.docs.rs]
+all-features = true
+rustdoc-args = ["--cfg", "docsrs"]
 
 [[bin]]
 name = "mml"
@@ -64,7 +67,7 @@ version = "0.10"
 version = "0.4"
 
 [dependencies.mml-lib]
-version = "=0.5.0"
+version = "1.0.0"
 default-features = false
 
 [dependencies.shellexpand-utils]
