--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,13 +6,13 @@ on:
       - v*
 
 jobs:
-  create_release:
+  create-release:
     runs-on: ubuntu-latest
     outputs:
-      upload_url: ${{ steps.create_release.outputs.upload_url }}
+      upload_url: ${{ steps.create-release.outputs.upload_url }}
     steps:
       - name: Create release
-        id: create_release
+        id: create-release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -22,80 +22,56 @@ jobs:
           draft: false
           prerelease: false
 
-  deploy:
+  deploy-releases:
     runs-on: ${{ matrix.os }}
-    needs: create_release
+    needs: create-release
     strategy:
       fail-fast: false
       matrix:
         include:
-          - target: linux
+          - target: x86_64-linux
             os: ubuntu-latest
-          - target: macos
-            os: macos-latest
-          - target: windows
+          - target: aarch64-linux
             os: ubuntu-latest
-          - target: musl
+          - target: x86_64-windows
             os: ubuntu-latest
+          - target: x86_64-darwin
+            os: macos-13
+          - target: aarch64-darwin
+            os: macos-14
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2        
+        uses: actions/checkout@v4
       - name: Install Nix
-        uses: cachix/install-nix-action@v22
+        uses: cachix/install-nix-action@v27
         with:
-          nix_path: nixpkgs=channel:nixos-unstable
+          nix_path: nixpkgs=channel:nixos-24.05
           extra_nix_config: |
             experimental-features = nix-command flakes
-      - uses: cachix/cachix-action@v12
+      - uses: cachix/cachix-action@v15
         with:
           name: soywod
           authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
-      - name: Build release
-        run: nix build .#${{ matrix.target }}
-      - name: Compress executable
+          extraPullNames: nix-community
+      - name: Build release archive
         run: |
-          mkdir -p {man,completions}
-          cp result/bin/mml* .
-          nix run .#${{ matrix.target }} man ./man
-          nix run .#${{ matrix.target }} completion bash > ./completions/mml.bash
-          nix run .#${{ matrix.target }} completion elvish > ./completions/mml.elvish
-          nix run .#${{ matrix.target }} completion fish > ./completions/mml.fish
-          nix run .#${{ matrix.target }} completion powershell > ./completions/mml.powershell
-          nix run .#${{ matrix.target }} completion zsh > ./completions/mml.zsh
-          tar -czf mml.tar.gz mml* man completions
-          zip -r mml.zip mml* man completions
-      - name: Upload tar.gz release asset
+          nix build -L .#${{ matrix.target }}
+          cp result/mml* .
+      - name: Upload tgz release archive
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ needs.create_release.outputs.upload_url }}
-          asset_path: mml.tar.gz
-          asset_name: mml-${{ matrix.target }}.tar.gz
+          upload_url: ${{ needs.create-release.outputs.upload_url }}
+          asset_path: mml.tgz
+          asset_name: mml.${{ matrix.target }}.tgz
           asset_content_type: application/gzip
-      - name: Upload zip release asset
+      - name: Upload zip release archive
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ needs.create_release.outputs.upload_url }}
+          upload_url: ${{ needs.create-release.outputs.upload_url }}
           asset_path: mml.zip
-          asset_name: mml-${{ matrix.target }}.zip
+          asset_name: mml.${{ matrix.target }}.zip
           asset_content_type: application/zip
-
-  deploy_crates:
-    runs-on: ubuntu-latest
-    needs: create_release
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2        
-      - name: Install Nix
-        uses: cachix/install-nix-action@v22
-        with:
-          nix_path: nixpkgs=channel:nixos-unstable
-          extra_nix_config: |
-            experimental-features = nix-command flakes
-      - name: Publish library to crates.io
-        env:
-          CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
-        run: nix develop -c cargo publish --no-verify --token ${CARGO_REGISTRY_TOKEN}
